k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nl-appstore-registry
  labels:
    name: nl-appstore-registry
    environment: production
