k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-backend
  namespace: nl-appstore-registry
  labels:
    app: go-backend
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: go-backend
