k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-frontend
  namespace: nl-appstore-registry
  labels:
    app: nuxt-frontend
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nuxt-frontend
